change contents names and clases

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="hero">
       <h1>Hello we`re Logo</h1>
     </div>
-    <section class="content">
+    <section>
       <img
         src="images/art-hauntington-jzY0KRJopEI-unsplash.jpg"
         alt="women picture"
@@ -38,7 +38,7 @@
         alt="man picture"
       />
     </section>
-    <section class="content1">
+    <article>
       <h2>How it started</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nemo
@@ -63,7 +63,7 @@
       <h3>Michail</h3>
       <p>Michail@logo.com</p>
       <p>8(6)23-456-789</p>
-    </section>
+    </article>
     <footer>
       <h4>Team</h4>
     </footer>
