add media only screen min-width: 768px

--- a/index.html
+++ b/index.html
@@ -65,7 +65,31 @@
       <p>8(6)23-456-789</p>
     </article>
     <footer>
-      <h4>Team</h4>
+      <div>
+        <h4>Team</h4>
+        <a href="#">Elsa</a>
+        <a href="#">Sara</a>
+        <a href="#">Michail</a>
+        <a href="#">Join us!</a>
+      </div>
+      <div>
+        <h4>Learn more</h4>
+        <a href="#">Elsa</a>
+        <a href="#">Sara</a>
+        <a href="#">Michail</a>
+      </div>
+      <div>
+        <h4>Meet us</h4>
+        <a href="#">Elsa</a>
+        <a href="#">Sara</a>
+        <a href="#">Michail</a>
+      </div>
+      <div>
+        <h4>Contacts</h4>
+        <a href="https://twitter.com/" target="blank">Twitter</a>
+        <a href="https://www.facebook.com/" target="blank">Facebook</a>
+        <a href="https://www.instagram.com/" target="blank">Instagram</a>
+      </div>
     </footer>
   </body>
 </html>
