--- a/index.html
+++ b/index.html
@@ -49,20 +49,34 @@
         error, eligendi.
       </p>
       <br />
-      <img
-        src="images/art-hauntington-jzY0KRJopEI-unsplash.jpg"
-        alt="women picture"
-      />
-      <h3>Elsa</h3>
-      <p>Elsa@logo.com</p>
-      <br />
-      <img
-        src="images/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg"
-        alt="man picture"
-      />
-      <h3>Michail</h3>
-      <p>Michail@logo.com</p>
-      <p>8(6)23-456-789</p>
+      <div class="contacts">
+        <div class="elsa">
+          <div>
+            <img
+              src="images/art-hauntington-jzY0KRJopEI-unsplash.jpg"
+              alt="women picture"
+            />
+          </div>
+          <div>
+            <h3>Elsa</h3>
+            <p>Elsa@logo.com</p>
+          </div>
+        </div>
+        <br />
+        <div class="michail">
+          <div>
+            <img
+              src="images/joseph-gonzalez-iFgRcqHznqg-unsplash.jpg"
+              alt="man picture"
+            />
+          </div>
+          <div>
+            <h3>Michail</h3>
+            <p>Michail@logo.com</p>
+            <p>8(6)23-456-789</p>
+          </div>
+        </div>
+      </div>
     </article>
     <footer>
       <div>
