--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="/images/images.png" alt="logo" />
+      <img class="logo" src="/images/logo.png" alt="logo" />
       <form>
         <input type="text" name="search" placeholder="Search..." />
       </form>
